# animal-randomizer

./: CITATION.cff  Changelog.md  LICENSE  README.md  pyproject.toml  requirements-windows-build.txt  requirements.txt
docs/: developer_guide.md  index.html  user_guide.md  windows_release.md
examples/: example_allocation.csv  example_dataset.csv  example_project.nprj  example_report.html
scripts/: LICENSE  build_windows.ps1  installer.iss
src/animal_randomizer/: __init__.py  audit.py  cli.py  core.py  export.py  hashing.py  io_handlers.py  models.py  project_io.py  randomization.py  report.py  service.py  stats.py  utils.py  validation.py
src/animal_randomizer/ui/: allocation.csv  allocation.tsv  allocation.xlsx  allocation_grouped_for_prism.csv  allocation_report.html  app.py  main_window.py  study.nprj
tests/: test_basic.py  test_randomization_engine.py
