[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animal-randomizer"
version = "0.3.0"
description = "Neuroprocessing Randomizer: reproducible animal group allocation with auditable workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name="Ali Mirzakhani", email="lab@neuroprocessing.org" }
]

keywords = ["neuroscience", "animal studies", "randomization", "reproducibility"]

dependencies = [
  "pandas>=2.0.0",
  "openpyxl>=3.1.0",
  "PyQt6>=6.6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
animal-randomizer = "animal_randomizer.cli:main"
animal-randomizer-gui = "animal_randomizer.ui.main_window:launch"

[project.urls]
Homepage = "https://github.com/neuroprocessing/animal-randomizer"
Repository = "https://github.com/neuroprocessing/animal-randomizer"
Issues = "https://github.com/neuroprocessing/animal-randomizer/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
